# GrowthAI

./: .dockerignore  .env.example  .gitignore  Dockerfile  PROGRESS.md  README.md  pyproject.toml  render.yaml
.cursor/rules/: retrieval.md  standards.md
backend/: README.md
backend/app/: __init__.py  bootstrap.py  db.py  extraction.py  judge.py  main.py  models.py  openai_utils.py  qa.py  retrieval.py  schemas.py  seed.py  settings.py
docs/: AGENTS.md  BRIEF.md  DEPLOYMENT.md  PLAN.md  SWAGGER_TEST_GUIDE.md
eval/: expected.sample.json  expected.stable.json  pre_part5_gate.py  run.py  verify_live_url.py  verify_part2.py  verify_part3.py  verify_part3_bulk.py  verify_part4.py  verify_part4_bulk.py  verify_part5.py  verify_part6.py  verify_part7.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
