[project]
name = "northwind-expense-pre-review"
version = "0.1.0"
description = "Northwind Logistics expense pre-review system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.0.15",
    "fastapi>=0.116.0",
    "openai>=2.4.0",
    "httpx2>=0.22.0",
    "pydantic-settings>=2.11.0",
    "pymupdf>=1.26.3",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.35.0",
    "python-multipart>=0.0.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
